--- a/ClinicPoint/ClinicPoint.csproj
+++ b/ClinicPoint/ClinicPoint.csproj
@@ -195,9 +195,34 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804080659553_InitialMigration.cs" />
+    <Compile Include="Migrations\201804080659553_InitialMigration.Designer.cs">
+      <DependentUpon>201804080659553_InitialMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201804080814387_AddPatientModel.cs" />
+    <Compile Include="Migrations\201804080814387_AddPatientModel.Designer.cs">
+      <DependentUpon>201804080814387_AddPatientModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201804080816352_AddSpecialtyModel.cs" />
+    <Compile Include="Migrations\201804080816352_AddSpecialtyModel.Designer.cs">
+      <DependentUpon>201804080816352_AddSpecialtyModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201804080821188_AddPhysicianModel.cs" />
+    <Compile Include="Migrations\201804080821188_AddPhysicianModel.Designer.cs">
+      <DependentUpon>201804080821188_AddPhysicianModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201804080839403_AddAppointmentModel.cs" />
+    <Compile Include="Migrations\201804080839403_AddAppointmentModel.Designer.cs">
+      <DependentUpon>201804080839403_AddAppointmentModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Appointment.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\Patient.cs" />
+    <Compile Include="Models\Physician.cs" />
+    <Compile Include="Models\Specialty.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -274,6 +299,23 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201804080659553_InitialMigration.resx">
+      <DependentUpon>201804080659553_InitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804080814387_AddPatientModel.resx">
+      <DependentUpon>201804080814387_AddPatientModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804080816352_AddSpecialtyModel.resx">
+      <DependentUpon>201804080816352_AddSpecialtyModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804080821188_AddPhysicianModel.resx">
+      <DependentUpon>201804080821188_AddPhysicianModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804080839403_AddAppointmentModel.resx">
+      <DependentUpon>201804080839403_AddAppointmentModel.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
