--- a/ClinicPoint/ClinicPoint.csproj
+++ b/ClinicPoint/ClinicPoint.csproj
@@ -205,13 +205,18 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\Api\AppointmentsController.cs" />
     <Compile Include="Controllers\Api\PatientsController.cs" />
+    <Compile Include="Controllers\Api\PhysiciansController.cs" />
     <Compile Include="Controllers\AppointmentController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\PatientController.cs" />
     <Compile Include="Controllers\PhysicianController.cs" />
+    <Compile Include="Dtos\AppointmentDto.cs" />
     <Compile Include="Dtos\PatientDto.cs" />
+    <Compile Include="Dtos\PhysicianDto.cs" />
+    <Compile Include="Dtos\SpecialtyTypeDto.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -235,6 +240,22 @@
     <Compile Include="Migrations\201804080839403_AddAppointmentModel.Designer.cs">
       <DependentUpon>201804080839403_AddAppointmentModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804120444485_SeedSpecialty.cs" />
+    <Compile Include="Migrations\201804120444485_SeedSpecialty.Designer.cs">
+      <DependentUpon>201804120444485_SeedSpecialty.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201804120542338_ChangedPhysicianAndSpecialtyModel.cs" />
+    <Compile Include="Migrations\201804120542338_ChangedPhysicianAndSpecialtyModel.Designer.cs">
+      <DependentUpon>201804120542338_ChangedPhysicianAndSpecialtyModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201804120621171_RenameAndUpdatedSpecialtyModel.cs" />
+    <Compile Include="Migrations\201804120621171_RenameAndUpdatedSpecialtyModel.Designer.cs">
+      <DependentUpon>201804120621171_RenameAndUpdatedSpecialtyModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201804120646015_UpdatedAppointementModel.cs" />
+    <Compile Include="Migrations\201804120646015_UpdatedAppointementModel.Designer.cs">
+      <DependentUpon>201804120646015_UpdatedAppointementModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Appointment.cs" />
@@ -242,7 +263,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Patient.cs" />
     <Compile Include="Models\Physician.cs" />
-    <Compile Include="Models\Specialty.cs" />
+    <Compile Include="Models\SpecialtyType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\NewAppointmentViewModel.cs" />
@@ -340,6 +361,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201804080839403_AddAppointmentModel.resx">
       <DependentUpon>201804080839403_AddAppointmentModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804120444485_SeedSpecialty.resx">
+      <DependentUpon>201804120444485_SeedSpecialty.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804120542338_ChangedPhysicianAndSpecialtyModel.resx">
+      <DependentUpon>201804120542338_ChangedPhysicianAndSpecialtyModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804120621171_RenameAndUpdatedSpecialtyModel.resx">
+      <DependentUpon>201804120621171_RenameAndUpdatedSpecialtyModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804120646015_UpdatedAppointementModel.resx">
+      <DependentUpon>201804120646015_UpdatedAppointementModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
