--- a/ClinicPoint/ClinicPoint.csproj
+++ b/ClinicPoint/ClinicPoint.csproj
@@ -208,11 +208,11 @@
     <Compile Include="Controllers\Api\AppointmentsController.cs" />
     <Compile Include="Controllers\Api\PatientsController.cs" />
     <Compile Include="Controllers\Api\PhysiciansController.cs" />
-    <Compile Include="Controllers\AppointmentController.cs" />
+    <Compile Include="Controllers\AppointmentsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\PatientController.cs" />
-    <Compile Include="Controllers\PhysicianController.cs" />
+    <Compile Include="Controllers\PatientsController.cs" />
+    <Compile Include="Controllers\PhysiciansController.cs" />
     <Compile Include="Dtos\AppointmentDto.cs" />
     <Compile Include="Dtos\PatientDto.cs" />
     <Compile Include="Dtos\PhysicianDto.cs" />
@@ -256,6 +256,10 @@
     <Compile Include="Migrations\201804120646015_UpdatedAppointementModel.Designer.cs">
       <DependentUpon>201804120646015_UpdatedAppointementModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201804151706527_RenamePhysicianIDToPhysicianId.cs" />
+    <Compile Include="Migrations\201804151706527_RenamePhysicianIDToPhysicianId.Designer.cs">
+      <DependentUpon>201804151706527_RenamePhysicianIDToPhysicianId.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Appointment.cs" />
@@ -266,7 +270,9 @@
     <Compile Include="Models\SpecialtyType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\NewAppointmentViewModel.cs" />
+    <Compile Include="ViewModels\AppointmentFormViewModel.cs" />
+    <Compile Include="ViewModels\PatientFormViewModel.cs" />
+    <Compile Include="ViewModels\PhysicianFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -501,9 +507,12 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
-    <Content Include="Views\Appointment\Index.cshtml" />
-    <Content Include="Views\Physician\Index.cshtml" />
-    <Content Include="Views\Patient\Index.cshtml" />
+    <Content Include="Views\Appointments\Index.cshtml" />
+    <Content Include="Views\Physicians\Index.cshtml" />
+    <Content Include="Views\Patients\Index.cshtml" />
+    <Content Include="Views\Patients\PatientForm.cshtml" />
+    <Content Include="Views\Physicians\PhysicianForm.cshtml" />
+    <Content Include="Views\Appointments\AppointmentForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -548,6 +557,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201804120646015_UpdatedAppointementModel.resx">
       <DependentUpon>201804120646015_UpdatedAppointementModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201804151706527_RenamePhysicianIDToPhysicianId.resx">
+      <DependentUpon>201804151706527_RenamePhysicianIDToPhysicianId.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
