--- a/ClinicPoint/packages.config
+++ b/ClinicPoint/packages.config
@@ -5,7 +5,8 @@
   <package id="bootbox" version="4.3.0" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
-  <package id="jQuery" version="1.10.2" targetFramework="net461" />
+  <package id="fullcalendar" version="3.9.0" targetFramework="net461" />
+  <package id="jQuery" version="2.0.0" targetFramework="net461" />
   <package id="jquery.datatables" version="1.10.11" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net461" />
@@ -40,6 +41,7 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
+  <package id="Moment.js" version="2.9.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
